--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -17,40 +17,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" rowHeight="64" id="igp-Ri-LUN" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="64"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" rowHeight="99" id="igp-Ri-LUN" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="99"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="igp-Ri-LUN" id="tX5-Gt-08y">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="igp-Ri-LUN" id="tX5-Gt-08y">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="l1R-YV-br1">
-                                            <rect key="frame" x="7" y="7" width="109" height="50"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XuU-FD-JeN">
-                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="50"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="52" id="TDo-fz-mBT"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVb-Tq-eEC">
-                                                    <rect key="frame" x="64" y="0.0" width="45" height="50"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lcl-hq-DDM">
+                                            <rect key="frame" x="10" y="6" width="80" height="87"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="80" id="b50-AG-2P9"/>
+                                                <constraint firstAttribute="width" constant="80" id="kk7-NJ-w8L"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVb-Tq-eEC">
+                                            <rect key="frame" x="101" y="37" width="250" height="20.333333333333332"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="l1R-YV-br1" firstAttribute="centerY" secondItem="tX5-Gt-08y" secondAttribute="centerY" id="Qem-Id-zU9"/>
-                                        <constraint firstItem="l1R-YV-br1" firstAttribute="leading" secondItem="tX5-Gt-08y" secondAttribute="leading" constant="7" id="Wdw-XM-f0z"/>
+                                        <constraint firstItem="lcl-hq-DDM" firstAttribute="leading" secondItem="tX5-Gt-08y" secondAttribute="leading" constant="10" id="8mL-hF-jty"/>
+                                        <constraint firstItem="lcl-hq-DDM" firstAttribute="top" secondItem="tX5-Gt-08y" secondAttribute="top" constant="6" id="LAA-7Z-i7u"/>
+                                        <constraint firstItem="DVb-Tq-eEC" firstAttribute="leading" secondItem="lcl-hq-DDM" secondAttribute="trailing" constant="8" id="Oxd-9O-gvA"/>
+                                        <constraint firstAttribute="bottom" secondItem="lcl-hq-DDM" secondAttribute="bottom" constant="6" id="cG6-EC-6sR"/>
+                                        <constraint firstItem="DVb-Tq-eEC" firstAttribute="top" secondItem="tX5-Gt-08y" secondAttribute="topMargin" constant="26" id="g1v-T9-EfK"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="contactImageView" destination="XuU-FD-JeN" id="Pst-6f-LC7"/>
+                                    <outlet property="contactImageView" destination="lcl-hq-DDM" id="aG8-IM-FI1"/>
                                     <outlet property="contactNameLabel" destination="DVb-Tq-eEC" id="7Oh-f2-vdw"/>
-                                    <segue destination="hjB-B7-MeC" kind="presentation" id="tI2-ig-NbS"/>
+                                    <segue destination="hjB-B7-MeC" kind="presentation" identifier="ContactDetailSegue" id="tI2-ig-NbS"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
