--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -11,13 +11,13 @@
         <!--Users-->
         <scene sceneID="3hg-vt-5pS">
             <objects>
-                <tableViewController id="rPs-Zu-WVg" sceneMemberID="viewController">
+                <tableViewController id="rPs-Zu-WVg" customClass="AllContactsTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wXn-Lt-BaQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactCell" id="Ewl-mk-vq6" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" id="Ewl-mk-vq6" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="45"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ewl-mk-vq6" id="W1w-aY-lPa">
@@ -50,6 +50,7 @@
                                 <connections>
                                     <outlet property="contactImageView" destination="BrF-ZR-KEg" id="b59-Kz-iHZ"/>
                                     <outlet property="contactNameLabel" destination="aqA-Im-9yP" id="4NS-Fh-2wo"/>
+                                    <segue destination="WPi-qM-1PZ" kind="show" identifier="GetDetialSegue" id="rac-iA-brX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -59,11 +60,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Users" id="Hn8-JD-lIH">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="cBh-Xx-Pnk">
-                            <connections>
-                                <segue destination="WPi-qM-1PZ" kind="show" id="qk5-y3-1Db"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="cBh-Xx-Pnk"/>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aR7-FT-yeP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -81,8 +78,11 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gOq-bi-HrX">
                                 <rect key="frame" x="67" y="126" width="241" height="388"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lvz-c9-XX9">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lvz-c9-XX9">
                                         <rect key="frame" x="0.0" y="0.0" width="241" height="273"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Lvz-c9-XX9" secondAttribute="height" multiplier="241:273" id="KVj-hN-416"/>
+                                        </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yWG-rs-75F">
                                         <rect key="frame" x="0.0" y="288" width="124" height="29"/>
