--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="Clf-mR-Me4" id="tqa-tJ-kCm"/>
                                     <outlet property="thumbnailImageView" destination="3QI-YP-EiX" id="A0k-sg-RNz"/>
-                                    <segue destination="aog-50-bFP" kind="presentation" identifier="UserDetailSegue" id="iwp-Oz-gY0"/>
+                                    <segue destination="aog-50-bFP" kind="presentation" identifier="UserDetailShowSegue" id="iwp-Oz-gY0"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -75,53 +75,64 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CVj-YV-gcw">
-                                <rect key="frame" x="67" y="77" width="240" height="180"/>
+                                <rect key="frame" x="20" y="20" width="335" height="237"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoW-BY-d5W">
-                                <rect key="frame" x="67" y="323" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ER4-F7-2vY">
-                                <rect key="frame" x="67" y="376" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5dj-dK-dCP">
-                                <rect key="frame" x="67" y="434" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="9q1-6p-9c2">
+                                <rect key="frame" x="20" y="327" width="43" height="94"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOV-kF-uFl">
+                                        <rect key="frame" x="0.0" y="0.0" width="43" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otR-Ij-UJI">
+                                        <rect key="frame" x="0.0" y="37" width="43" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Yl-87-jrL">
+                                        <rect key="frame" x="0.0" y="73.5" width="43" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="UOV-kF-uFl" firstAttribute="leading" secondItem="9q1-6p-9c2" secondAttribute="leading" id="0ww-B3-sKH"/>
+                                    <constraint firstItem="otR-Ij-UJI" firstAttribute="top" secondItem="UOV-kF-uFl" secondAttribute="bottom" constant="16" id="6IO-mZ-PJp"/>
+                                    <constraint firstItem="7Yl-87-jrL" firstAttribute="top" secondItem="otR-Ij-UJI" secondAttribute="bottom" constant="16" id="AgO-z1-OYq"/>
+                                    <constraint firstItem="UOV-kF-uFl" firstAttribute="top" secondItem="9q1-6p-9c2" secondAttribute="top" id="HgQ-7d-uee"/>
+                                    <constraint firstAttribute="trailing" secondItem="UOV-kF-uFl" secondAttribute="trailing" id="KQq-NP-6nO"/>
+                                    <constraint firstAttribute="bottom" secondItem="7Yl-87-jrL" secondAttribute="bottom" id="OL1-gg-hsY"/>
+                                    <constraint firstItem="otR-Ij-UJI" firstAttribute="top" secondItem="UOV-kF-uFl" secondAttribute="bottom" constant="8" id="XUs-Jb-wwX"/>
+                                    <constraint firstItem="7Yl-87-jrL" firstAttribute="top" secondItem="otR-Ij-UJI" secondAttribute="bottom" constant="16" id="ZVN-bz-ccC"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Yl-87-jrL" secondAttribute="trailing" id="a76-9w-Toz"/>
+                                    <constraint firstItem="otR-Ij-UJI" firstAttribute="leading" secondItem="9q1-6p-9c2" secondAttribute="leading" id="dbW-g1-cor"/>
+                                    <constraint firstItem="7Yl-87-jrL" firstAttribute="leading" secondItem="9q1-6p-9c2" secondAttribute="leading" id="p0i-Sq-LE9"/>
+                                    <constraint firstAttribute="trailing" secondItem="otR-Ij-UJI" secondAttribute="trailing" id="zjA-Ij-drj"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="5eV-2o-NY5" firstAttribute="trailing" secondItem="NoW-BY-d5W" secondAttribute="trailing" constant="266" id="6d4-f1-iUe"/>
-                            <constraint firstItem="NoW-BY-d5W" firstAttribute="top" secondItem="CVj-YV-gcw" secondAttribute="bottom" constant="66" id="87d-TR-bCP"/>
-                            <constraint firstItem="5dj-dK-dCP" firstAttribute="top" secondItem="ER4-F7-2vY" secondAttribute="bottom" constant="37" id="BAD-FL-8KS"/>
-                            <constraint firstItem="5eV-2o-NY5" firstAttribute="trailing" secondItem="CVj-YV-gcw" secondAttribute="trailing" constant="68" id="ENj-WD-z7o"/>
-                            <constraint firstItem="NoW-BY-d5W" firstAttribute="top" secondItem="CVj-YV-gcw" secondAttribute="bottom" constant="66" id="FOV-ug-JCC"/>
-                            <constraint firstItem="CVj-YV-gcw" firstAttribute="top" secondItem="5eV-2o-NY5" secondAttribute="top" constant="77" id="GmF-cl-Cm2"/>
-                            <constraint firstItem="ER4-F7-2vY" firstAttribute="top" secondItem="NoW-BY-d5W" secondAttribute="bottom" constant="32" id="Ld3-P5-Qce"/>
-                            <constraint firstItem="ER4-F7-2vY" firstAttribute="leading" secondItem="5eV-2o-NY5" secondAttribute="leading" constant="67" id="Ncw-VB-h4A"/>
-                            <constraint firstItem="CVj-YV-gcw" firstAttribute="leading" secondItem="5eV-2o-NY5" secondAttribute="leading" constant="67" id="Uzq-XO-d5A"/>
-                            <constraint firstItem="5eV-2o-NY5" firstAttribute="trailing" secondItem="5dj-dK-dCP" secondAttribute="trailing" constant="266" id="eAs-Zy-CVt"/>
-                            <constraint firstItem="5dj-dK-dCP" firstAttribute="top" secondItem="ER4-F7-2vY" secondAttribute="bottom" constant="37" id="gBk-UQ-0aZ"/>
-                            <constraint firstItem="5eV-2o-NY5" firstAttribute="trailing" secondItem="ER4-F7-2vY" secondAttribute="trailing" constant="266" id="mdu-aK-zUG"/>
-                            <constraint firstItem="5dj-dK-dCP" firstAttribute="leading" secondItem="5eV-2o-NY5" secondAttribute="leading" constant="67" id="nP5-kg-q2p"/>
-                            <constraint firstItem="ER4-F7-2vY" firstAttribute="top" secondItem="NoW-BY-d5W" secondAttribute="bottom" constant="32" id="qFr-RY-Z2X"/>
-                            <constraint firstItem="NoW-BY-d5W" firstAttribute="leading" secondItem="5eV-2o-NY5" secondAttribute="leading" constant="67" id="rDZ-hj-eq7"/>
-                            <constraint firstItem="5eV-2o-NY5" firstAttribute="bottom" secondItem="5dj-dK-dCP" secondAttribute="bottom" constant="192" id="v3K-aR-D04"/>
+                            <constraint firstItem="9q1-6p-9c2" firstAttribute="top" secondItem="CVj-YV-gcw" secondAttribute="bottom" constant="70" id="0Te-DO-9xL"/>
+                            <constraint firstItem="5eV-2o-NY5" firstAttribute="trailing" secondItem="CVj-YV-gcw" secondAttribute="trailing" constant="20" id="2iQ-vS-ZQ7"/>
+                            <constraint firstItem="5eV-2o-NY5" firstAttribute="bottom" secondItem="9q1-6p-9c2" secondAttribute="bottom" constant="226" id="EB0-75-iDW"/>
+                            <constraint firstItem="5eV-2o-NY5" firstAttribute="trailing" secondItem="9q1-6p-9c2" secondAttribute="trailing" constant="312" id="FL0-uV-aQm"/>
+                            <constraint firstItem="CVj-YV-gcw" firstAttribute="leading" secondItem="5eV-2o-NY5" secondAttribute="leading" constant="20" id="Hrs-1d-KsB"/>
+                            <constraint firstItem="5eV-2o-NY5" firstAttribute="bottom" secondItem="CVj-YV-gcw" secondAttribute="bottom" constant="390" id="fSx-dV-aSW"/>
+                            <constraint firstItem="CVj-YV-gcw" firstAttribute="top" secondItem="5eV-2o-NY5" secondAttribute="top" constant="20" id="vGZ-1e-hLE"/>
+                            <constraint firstItem="9q1-6p-9c2" firstAttribute="leading" secondItem="5eV-2o-NY5" secondAttribute="leading" constant="20" id="xIj-4x-NcP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5eV-2o-NY5"/>
                     </view>
                     <connections>
-                        <outlet property="emailLabel" destination="5dj-dK-dCP" id="PLh-e4-4kt"/>
+                        <outlet property="emailLabel" destination="7Yl-87-jrL" id="Q6G-Na-uxF"/>
                         <outlet property="largePhotoImageView" destination="CVj-YV-gcw" id="C91-sb-lGq"/>
-                        <outlet property="nameLabel" destination="NoW-BY-d5W" id="QQZ-vW-6m5"/>
-                        <outlet property="phoneNumberLabel" destination="ER4-F7-2vY" id="njy-Iu-CIe"/>
+                        <outlet property="nameLabel" destination="UOV-kF-uFl" id="Ld9-Zg-nTV"/>
+                        <outlet property="phoneNumberLabel" destination="otR-Ij-UJI" id="Ba9-fK-bIT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZy-3Y-lJq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
